--- a/app/src/main/res/layout/fragment_tv.xml
+++ b/app/src/main/res/layout/fragment_tv.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.tvFragment">
+    tools:context=".ui.fragments.tvFragment"
+    android:background="@color/black">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
